updating swagger.json
